force-app/main/default/objects/MBMS_Movie_Photo__c/MBMS_Movie_Photo__c.object-meta.xml
<CustomObject>
    <description>This is an object for storing information about the Movie Photo.</description>
    <label>Movie Photo</label>
    <nameField>
        <label>Movie Photo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movie Photos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>