force-app/main/default/objects/MBMS_Movie_Photo__c/fields/MBMS_Movie__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Movie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A field that stores a lookup to the Movie object.</description>
    <inlineHelpText>Movie.</inlineHelpText>
    <label>Movie</label>
    <referenceTo>MBMS_Movie__c</referenceTo>
    <relationshipName>Photos</relationshipName>
    <type>Lookup</type>
</CustomField>