force-app/main/default/objects/MBMS_Movie_Photo__c/fields/MBMS_Photo__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Photo__c</fullName>
    <description>A formula field that displays Book cover image or string value (if the cover image URL is not available).</description>
    <formula>IF(NOT(ISBLANK(MBMS_Photo_URL__c)), IMAGE(MBMS_Photo_URL__c, &apos;Photo&apos;), &quot;Photo is not available.&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Photo of the Movie.</inlineHelpText>
    <label>Photo</label>
    <type>Text</type>
</CustomField>