force-app/main/default/objects/MBMS_Movie_Photo__c/fields/MBMS_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>MBMS_Photo_URL__c</fullName>
    <description>A field that stores a Photo URL.</description>
    <inlineHelpText>Photo URL.</inlineHelpText>
    <label>Photo URL</label>
    <type>Url</type>
</CustomField>