force-app/main/default/objects/MBMS_Movie_Photo__c/listViews/Approvers_Queue_MBMS_Movie_Photo.listView-meta.xml
<ListView>
    <fullName>Approvers_Queue_MBMS_Movie_Photo</fullName>
    <filterScope>Queue</filterScope>
    <label>Approvers Queue</label>
    <queue>Approvers_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>